--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h1>VOUS AVEZ DES IDÉES <span class="idea"><img src="/images/idea-lamp.png" alt="idea"></span> ?</h1>
                     <h3>CRÉONS UNE HISTOIRE ENSEMBLE</h3>
                     <p>Chaque projet nécessite un accompagnement sur-mesure et une expertise personnalisée</p>
-                    <button class="btn-read"><a href="#">savior plus</a></button>
+                    <button class="btn-read"><a href="#">savoir plus</a></button>
                 </article>
             </div>
             <div class="dark lighting">
@@ -121,7 +121,7 @@
                             Comme un caméléon notre agence s’adapte parfaitement au rythme et rime
                             a vos exigences adéquates
                         </p>
-                        <button class="btn-read"><a href="#">savior plus</a></button>               
+                        <button class="btn-read"><a href="#">savoir plus</a></button>               
                     </div>
                     <!--telephone-->
                     <div class="block-pic telephone">
@@ -141,7 +141,8 @@
         
         <!--PANELS FIXED-->
         <div class="all-panels">
-        <div class="panel-tv">
+            <div class="panel-tv">
+            <div class="layer-tv">
             <div class="con-element">
             <div class="text t-tv">
                 <h1>OPTEZ VOUS
@@ -155,15 +156,17 @@
                     en perpétuelle recherche d’innovation et de qualité.
                     Nous vous accompagnons et supervisons la production et la livraison (tout le territoire 
                     national) si besoin.</p>
-                    <button class="btn-read"><a href="#">savior plus</a></button>
+                    <button class="btn-read"><a href="#">savoir plus</a></button>
             </div>
             <div class="con-tv">
                 <img src="/images/TV-MEDIA.png" class="tv" alt="tv">
             </div>
             </div>
         </div>
-        <div class="panel-sofa">
-            <div class="con-element">
+            </div>
+            <div class="panel-sofa">
+                <div class="layer-sofa">
+                <div class="con-element">
                 <div class="text t-sofa">
                     <h1>ETES VOUS PRETS A STIMULER<br>
                     VOTRE MARQUE ET AUGMENTENT VOS REVENUS ?</h1>
@@ -172,14 +175,16 @@
                      aujourd'hui. Étant donné que la numérisationa un impact énorme sur l'optimisation etl'intégration de l'entreprise, il devient deplus en 
                      plus important pour les marques de tirerparti de plates-formes et d'outilsmulticanaux robustes pour améliorerl'engagement de la 
                      marque et augmenter les revenus.</p>
-                    <button class="btn-read"><a href="#">saviorplus</a></button>
+                    <button class="btn-read"><a href="#">savoir plus</a></button>
                 </div>
                     <div class="con-sofa">
                         <img src="/images/SOFA-SOCIAL-MEDIA.png" class="sofa" alt="sofa">
                     </div>
             </div>
+            </div>
         </div>
         <div class="panel-window">
+            <div class="layer-win">
             <div class="con-element">
                 <div class="window">
                     <img src="/images/window2.1.png" class="window" alt="window">
@@ -189,8 +194,9 @@
                     <h3>NOUS METTONS À VOTRE DISPOSITION PLUSIEURS AXES D’AFFICHAGE.</h3>
                     <p>L’affichage urbain, la puissance d’un média premium, au service de vos marques, on vous propose des 
                         solutions d’affichage sur mesure, flexibles et adéquates à vos objectifs et votre budget.</p>
-                        <button class="btn-read"><a href="#">savior plus</a></button>
+                        <button class="btn-read"><a href="#">savoir plus</a></button>
                 </div>
+            </div>
             </div>
         </div>
       
