Added pillows effect

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <!--Desktop img-->
             <div class="desktop-img">
-                <img src="/images/DESK.png" class="desk" alt="desktop">
+                <img src="/images/DESK1.png" class="desk" alt="desktop">
             </div>
             <!--Lamp effect-->
             <div class="light-lamp">
@@ -167,6 +167,13 @@
             <div class="panel-sofa">
                 <div class="layer-sofa">
                 <div class="con-element">
+                <!--PILLOW EFFECT-->
+                <div class="pillows">
+                    <img src="/images/PILLOW-INSTA.png" class='s-media inst' alt="insta">
+                    <img src="/images/PILLOW-FACEBOOK.png" class='s-media fb' alt="facebook">
+                    <img src="/images/PILLOW-TWITTER.png" class='s-media twi' alt="twitter">
+                    <img src="/images/PILLOW-YOUTUBE.png" class='s-media yt' alt="youtube">
+                </div>
                 <div class="text t-sofa">
                     <h1>ETES VOUS PRETS A STIMULER<br>
                     VOTRE MARQUE ET AUGMENTENT VOS REVENUS ?</h1>
