corr slide left-color1

--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
                 <!-- container -->
                 <div class="container all yellow">
                     <!--Text Yellow-->
-                    <div class="text-yellow" data-aos="fade-right" data-aos-duration="500" data-aos-delay="0">
+                    <div class="text-yellow">
                         <h1>BESOIN DE COMMUNIQUER ?</h1>
                         <h3>CHANGER DE MÉTHODES</h3>
-                        <p>De jour en jour le monde bouge, et
+                        <p>
+                            De jour en jour le monde bouge, et
                             la technologie ne cesse de changer de
                             direction, d’habillement et de couleur.
                             Comme un caméléon notre agence s’adapte parfaitement au rythme et rime
@@ -143,7 +144,7 @@
         <div class="all-panels">
             <div class="panel-tv">
             <div class="layer-tv">
-            <div class="con-element">
+            <div class="con-element ele-tv">
             <div class="text t-tv">
                 <h1>OPTEZ VOUS
                     POUR DES SOLUTIONS
@@ -166,7 +167,7 @@
             </div>
             <div class="panel-sofa">
                 <div class="layer-sofa">
-                <div class="con-element">
+                <div class="con-element ele-sofa">
                 <!--PILLOW EFFECT-->
                 <div class="pillows">
                     <img src="/images/PILLOW-INSTA.png" class='s-media inst' alt="insta">
@@ -192,7 +193,7 @@
         </div>
         <div class="panel-window">
             <div class="layer-win">
-            <div class="con-element">
+            <div class="con-element ele-win">
                 <div class="window">
                     <img src="/images/window2.1.png" class="window" alt="window">
                 </div>
